<resources>
    <string name="app_name">Tutortek</string>
    <string name="role_admin">Admin</string>
    <string name="title_learn">Learn</string>
    <string name="description_learn">Learn new and exciting thins!</string>
    <string name="title_meet">Meet</string>
    <string name="description_meet">Meet your local Tutortek community!</string>
    <string name="title_earn">Earn</string>
    <string name="description_earn">Earn money while sharing knowledge!</string>
    <string name="button_get_started">Get started</string>
    <string name="button_next">Next</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="new_user">Register Now</string>
    <string name="registration_header">We are thrilled to have you!</string>
    <string name="edit_name">First Name</string>
    <string name="edit_surname">Last Name</string>
    <string name="edit_birthdate">Birth Date</string>
    <string name="birthdate_value">%1$d-%2$s-%3$s</string>
    <string name="register">Register</string>
    <string name="radio_text_tutor">Tutor</string>
    <string name="radio_text_student">Student</string>
    <string name="txt_i_am">I am a:</string>
    <string name="nav_bar_home">Home</string>
    <string name="nav_bar_profile">Profile</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="dark_mode_switch">Dark theme</string>
    <string name="report_bug">Report a bug</string>
    <string name="notifications_switch">Allow notifications</string>
    <string name="btn_app_info">App info</string>
    <string name="name_surname">Name Surname</string>
    <string name="profile_title">This is a title</string>
    <string name="profile_description">This is a description</string>
    <string name="profile_extra_info">This is extra info</string>
    <string name="profile_rating">5.0</string>
    <string name="profile_rating_text">Rating</string>
    <string name="profile_courses">12</string>
    <string name="profile_courses_text">Courses</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="profile_full_name">%1$s %2$s</string>
    <string name="profile_birth_date">Birth date: %1$s</string>
    <string name="rating_format">%1$.2f</string>
    <string name="incorrect_credentials">Incorrect email or password</string>
    <string name="error_login">Unexpected error while logging in</string>
    <string name="error_register">Unexpected error while registering</string>
    <string name="field_empty">This field cannot be empty</string>
    <string name="password_too_short">Password must be at least 8 characters long</string>
    <string name="invalid_email">Please enter a valid e-mail</string>
    <string name="error_profile_create">Unexpected error while creating your profile</string>
    <string name="error_profile_retrieval">Error while retrieving profile data</string>
    <string name="error_profile_edit">Unexpected error while editing your profile</string>
    <string name="success_profile_edit">Profile updated</string>
    <string name="wrong_password">You have entered a wrong password</string>
    <string name="error_account_delete">Unexpected error while deleting account</string>
    <string name="error_change_password">Unexpected error while changing password</string>
    <string name="error_topics_get">Unexpected error while retrieving topics</string>
    <string name="error_topic_get">Unexpected error while retrieving the topic</string>
    <string name="error_topic_post">Unexpected error while creating the topic</string>
    <string name="error_topic_delete">Unexpected error while deleting the topic</string>
    <string name="error_topic_edit">Unexpected error while editing the topic</string>
    <string name="error_meetings_get">Unexpected error while getting meetings</string>
    <string name="error_meeting_get">Unexpected error while getting the meetings</string>
    <string name="error_invalid_integer">Please enter a valid integer</string>
    <string name="error_invalid_meeting_date">Please enter a date that is after today</string>
    <string name="error_meeting_post">Unexpected error while creating the meeting</string>
    <string name="error_invalid_birthdate">Please enter a date that is before today</string>
    <string name="error_meeting_delete">Unexpected error while deleting the meeting</string>
    <string name="error_meeting_edit">Unexpected error while editing the meeting</string>
    <string name="error_learning_materials_get">Unexpected error while getting learning materials</string>
    <string name="error_learning_material_get">Unexpected error while getting the learning material</string>
    <string name="error_learning_material_post">Unexpected error while creating the learning material</string>
    <string name="error_learning_material_delete">Unexpected error while deleting the learning material</string>
    <string name="error_learning_material_edit">Unexpected error while editing the learning material</string>
    <string name="error_bug_report_send">Unexpected error while sending a bug report</string>
    <string name="error_photo_upload">Unexpected error while uploading profile photo</string>
    <string name="error_photo_file_create">Unexpected error while writing photo to file</string>
    <string name="error_invalid_price">Please enter the price in format 0.00</string>
    <string name="error_purchase">Unexpected error during the transaction</string>
    <string name="error_rating">Unexpected error while submitting the rating</string>
    <string name="error_user_report">Unexpected error while sending a user report</string>
    <string name="error_attendants_get">Unexpected error while getting attendants</string>
    <string name="register_success">Account created successfully</string>
    <string name="account_deleted">Until next time!</string>
    <string name="password_change_success">Password changed successfully</string>
    <string name="topic_add_success">New topic added successfully</string>
    <string name="no_meetings">No meetings are available for this topic</string>
    <string name="meeting_add_success">New meeting added successfully</string>
    <string name="no_learning_materials">No learning materials are assigned to this meeting</string>
    <string name="learning_material_add_success">New learning material added successfully</string>
    <string name="no_attendants">No attendants are currently signed up</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="edit_title">What would you like to change?</string>
    <string name="delete_question">Leaving so soon?</string>
    <string name="delete_warning">Your account will be permanently deleted. This action cannot be undone!</string>
    <string name="btn_edit_profile_data">Edit profile</string>
    <string name="btn_change_password">Change password</string>
    <string name="btn_update_photo">Update profile picture</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="header_change_password">Keeping your account safe is amazing!</string>
    <string name="full_topic_list">Full topic list</string>
    <string name="my_topic_list">My topic list</string>
    <string name="my_meeting_list">My meeting list</string>
    <string name="btn_add_topic_description">Add topic</string>
    <string name="topic_name">Topic name</string>
    <string name="topic_add_header">Got a new topic for us?</string>
    <string name="topic_add_name">Name</string>
    <string name="btn_add_topic">Add</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="topic_delete_question">Are you sure you want to delete topic \"%1$s\"?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="edit_topic_header">Has something changed?</string>
    <string name="get_meetings">Lookup meetings</string>
    <string name="add_meeting">Add a meeting</string>
    <string name="view_profile">View tutor\'s profile</string>
    <string name="is_approved">Approved</string>
    <string name="is_not_approved">Not approved</string>
    <string name="meeting_name">Meeting name</string>
    <string name="meeting_date">Meeting date</string>
    <string name="add_meeting_header">One new meeting coming right up!</string>
    <string name="add_meeting_date">Date</string>
    <string name="add_meeting_attendants">Number of attendants</string>
    <string name="add_meeting_address">Address</string>
    <string name="add_meeting_description">Description</string>
    <string name="add_meeting_price">Price</string>
    <string name="default_date">1970–01–01</string>
    <string name="meeting_delete_question">Are you sure you want to delete meeting \"%1$s\"?</string>
    <string name="get_learning_materials">Lookup learning materials</string>
    <string name="add_learning_material">Add a learning material</string>
    <string name="btn_signup">Signup</string>
    <string name="btn_registered_users">Lookup attendants</string>
    <string name="learning_material_name">Learning material name</string>
    <string name="link">Link</string>
    <string name="learning_material_delete_question">Are you sure you want to delete learning material \"%1$s\"?</string>
    <string name="add_learning_material_header">It\'s great to prepare in advance!</string>
    <string name="bug_report_header">Tell us what\'s wrong</string>
    <string name="btn_send_report">Send</string>
    <string name="bug_report_success">Bug reported successfully</string>
    <string name="header_profile_picture">You look amazing!</string>
    <string name="description_profile_picture">Your profile picture</string>
    <string name="btn_take_photo">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_upload">Upload</string>
    <string name="photo_upload_success">Profile photo changed successfully!</string>
    <string name="notification_channel_name">Tutortek channel</string>
    <string name="notification_channel_description">This is the default channel for notifications</string>
    <string name="meeting_name_header">Name: %1$s</string>
    <string name="meeting_price_header">Price: %1$s€</string>
    <string name="btn_pay">Pay</string>
    <string name="pay_header">Please choose a payment method</string>
    <string name="payment_success">Payment successful!</string>
    <string name="dialog_rate_header">Rate the Tutor</string>
    <string name="selected_rating_placeholder">(0.0)</string>
    <string name="selected_rating">(%1$s)</string>
    <string name="btn_submit">Submit</string>
    <string name="rating_success">Rating submitted successfully</string>
    <string name="btn_rate">Rate</string>
    <string name="btn_report_user">Report</string>
    <string name="report_header">Noticed something bad? Tell us!</string>
    <string name="user_report_success">User reported successfully</string>
    <string name="contact_us">Contact us at ka.balciunas@ktu.edu</string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="attendant_name">Attendant name</string>
</resources>