<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        android:background="?colorOnPrimary"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_rate_header"
                android:textColor="?android:textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating_bar"
                android:stepSize="0.5"
                android:numStars="5"
                android:progressTint="@color/color_primary"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selected_rating"
                android:text="@string/selected_rating"
                android:textColor="?android:textColorPrimary"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                style="@style/loginButton"
                android:id="@+id/btn_submit_rating"
                android:text="@string/btn_submit"
                android:layout_marginTop="20dp"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>