<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".navigation_fragments.profile.ProfilePhotoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_profile_picture"
            android:textColor="?colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?colorOnPrimary"
            android:scaleType="centerCrop"
            app:cardCornerRadius="10dp"
            app:contentPaddingBottom="5dp"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp"
            app:contentPaddingTop="5dp"
            android:layout_gravity="center"
            card_view:cardUseCompatPadding="true"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="fitXY"
                android:contentDescription="@string/description_profile_picture"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorOnPrimary"
                android:text="@string/btn_take_photo"
                android:textColor="@color/color_primary"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_baseline_add_a_photo_24"
                app:iconTint="@color/color_primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorOnPrimary"
                android:text="@string/btn_gallery"
                android:textColor="@color/color_primary"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_baseline_add_photo_alternate_24"
                app:iconTint="@color/color_primary" />

        </LinearLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btn_upload"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:backgroundTint="?colorOnPrimary"
            android:text="@string/btn_upload"
            android:textSize="15sp"
            android:textColor="@color/color_primary"
            app:initialCornerAngle="27dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp"/>

    </LinearLayout>

</RelativeLayout>