<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation_fragments.profile.ProfileEditFragment"
    android:layout_gravity="center"
    android:background="@color/color_primary"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_title"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                card_view:cardUseCompatPadding="true"
                app:cardBackgroundColor="?colorOnPrimary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_txt_input_name"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintTextColor="@color/color_primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_edit_text_name"
                            style="@style/modifiedEditText"
                            android:textCursorDrawable="@drawable/text_input_cursor"
                            android:hint="@string/edit_name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_txt_input_surname"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintTextColor="@color/color_primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_edit_text_surname"
                            style="@style/modifiedEditText"
                            android:textCursorDrawable="@drawable/text_input_cursor"
                            android:hint="@string/edit_surname"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_txt_input_birthdate"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintTextColor="@color/color_primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_edit_text_birthdate"
                            style="@style/modifiedEditText"
                            android:textCursorDrawable="@drawable/text_input_cursor"
                            android:focusable="false"
                            android:hint="@string/edit_birthdate"
                            android:inputType="date"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/profile_txt_input_description"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintTextColor="@color/color_primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/profile_edit_text_description"
                            style="@style/modifiedEditText"
                            android:textCursorDrawable="@drawable/text_input_cursor"
                            android:hint="@string/description"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/btn_edit_save"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/save"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>